TP-1142 fix frontpage overflow views and adjust mobile navigation and fix search page icon

--- a/public/themes/custom/palvelumanuaali/components/00-base/03-site/_base.scss
+++ b/public/themes/custom/palvelumanuaali/components/00-base/03-site/_base.scss
@@ -482,3 +482,12 @@ footer.footer{
     border: unset;
   }
 }
+
+.overflow {
+  &--mobile-scroll {
+    overflow: scroll;
+    @include large {
+      overflow: auto;
+    }
+  }
+}
