--- a/public/themes/custom/palvelumanuaali/components/03-organisms/site/site-header/_site-header.scss
+++ b/public/themes/custom/palvelumanuaali/components/03-organisms/site/site-header/_site-header.scss
@@ -20,6 +20,7 @@ body:not(.logged-in) {
 .header {
   width: calc(100% + 32px);
   margin-left: -16px;
+  position: relative;
   @include large {
     z-index: 200;
     width: 100%;
