--- a/public/themes/custom/palvelumanuaali/components/05-pages/search/_search-filters.scss
+++ b/public/themes/custom/palvelumanuaali/components/05-pages/search/_search-filters.scss
@@ -201,6 +201,7 @@
       position: relative;
     }
     input[data-drupal-selector="edit-reset"] {
+      display: none;
       position: absolute;
       top: 0;
       left: -36px;
